# adk-validator

./: pyproject.toml
output/: result.json
src/: data.py  main.py
