[project]
name = "adk-validator"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "gringrape", email = "53764714+gringrape@users.noreply.github.com"},
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
